--- a/iron-news.css
+++ b/iron-news.css
@@ -1,7 +1,64 @@
-/* apply a natural box layout model to all elements, but allowing components to change */
 html {
-  box-sizing: border-box;
+  font-family: sans-serif;
+  font-size: 16px;
+  padding: 5px;
 }
-*, *:before, *:after {
-  box-sizing: inherit;
+
+nav {
+  background: #7D1935;
+  width: 85%;
+  margin: auto;
+  padding: 5px;
+
+  overflow: auto;
+}
+
+nav h1 {
+  font-weight: bold;
+  display: inline-block;
+  color:white;
+}
+
+#logo span {
+  color: white;
+  border: white solid 2px;
+  padding: 3px;
+  display: inline-block;
+  text-align: center;
+  width: 15px;
+  height: 15px;
+}
+
+nav ul {
+  display: inline-block;
+}
+
+nav li {
+  display: inline;
+
+  padding: 0 5px;
+}
+
+.nav-items {
+  color: white;
+  font-variant: small-caps;
+  font-size: 18px;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  font-weight:bold;
+}
+
+.content {
+  list-style-type: decimal;
+  list-style-position: inside;
+  width: 85%;
+  margin: auto;
+  padding: 5px;
+  background:#F5F3EE;
 }
