--- a/iron-news.css
+++ b/iron-news.css
@@ -20,7 +20,7 @@ nav {
   overflow: auto;
 }
 
-nav h1 {
+h1 {
   font-weight: bold;
   display: inline-block;
   color:black;
@@ -74,18 +74,50 @@ nav li a {
   content:"";
 }
 
-.login {
-  float:right;
-  padding-top:5px;
+/*Drop Down*/
+
+.dropdown {
+  display: block;
+  margin-left: 68em;
+  padding: 10px;
 }
 
-  .login {list-style: none;padding: 0px;margin: 0px;}
-  .login li ul {display: none;}
-  .login ul li a {display: block; padding: 5px 10px 5px 10px;text-decoration: none; background-color:#EEF0F3;
-           white-space: nowrap;}
-  .login li:hover ul {display: block; position: absolute;}
-  .login li:hover li {float: none;}
-  #drop-nav li ul li {border-top: 0px;}
+.dropdown ul {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+.dropdown li {
+  display: block;
+  position: relative;
+}
+
+.dropdown li a {
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown ul li ul {
+    visibility: hidden;
+    position: absolute;
+}
+
+.dropdown ul li:hover > ul,
+.dropdown ul li ul:hover {
+   visibility: visible;
+   background-color: #8D90A1;
+   color: white;
+   padding: 5px;
+}
+
+.dropdown ul li ul li {
+  clear: both;
+  padding: 5px 0 5px 18px;
+  width: 100%;
+}
+
+/* END of dropdown */
 
 a {
   color: inherit;
@@ -96,15 +128,6 @@ a:hover {
   font-weight:bold;
 }
 
-.middle {
-  display:inline-block;
-  width:85%;
-  margin:auto;
-  padding:5px;
-  line-height:15px;
-  background:#EEF0F3
-}
-
 .content {
   width:85%;
   margin:auto;
@@ -112,16 +135,24 @@ a:hover {
   background-color:#EEF0F3;
   list-style-type:decimal;
   list-style-position:inside;
+  font:sans-serif;
 }
 
-
-ol>li:nth-of-type(odd) {
-  background-color: #EEF0F3;
+.content2 {
+  margin-left: .5em;
+  line-height: 2em;
 }
-        ol { counter-reset: item }
-        li { display: block;}
-        ol>li:before { content: counter(item) ". "; counter-increment: item;
-                    color: #8D90A1; }
+.content2 a {
+  font-weight: bold;
+}
+
+.content>li:nth-of-type(-n+9) {
+  margin-left: .5em;
+}
+
+.content>li:nth-of-type(odd) {
+  background-color: #b8bac4;
+}
 
 .nav-end {
   border-top: 5px solid #8D90A1;
